--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/anahitvanoyan11/combinations#readme",
   "dependencies": {
+    "celebrate": "^15.0.3",
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "joi": "^17.13.3",
     "mysql2": "^3.14.1"
   }
 }
